# ai-starter

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_getting_started.ipynb
src/: app.py
tests/: conftest.py  test_app.py
